--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -348,5 +348,15 @@
   "venues_found" : "ملعب متاح",
   "cart" : "عربة التسوق",
   "address_created":"تم انشاء العنوان بنجاح",
-  "address_deleted_success":"تم مسح العنوان بنجاح"
+  "address_deleted_success":"تم مسح العنوان بنجاح",
+  "work_hours": "ساعات العمل",
+  "preorder_availability": "إمكانية الطلب مسبقًا",
+  "payment_methods": "وسائل الدفع",
+  "cash_on_delivery": "الدفع عند التسليم",
+  "feedback": "التقييم",
+  "leave_feedback": "اترك تقييم الخدمة",
+  "facebook": "فيسبوك",
+  "instagram": "انستجرام",
+  "twiiter": "تويتر",
+  "yes": "نعم"
 }
