add some trans + ProductWidget fix

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -360,5 +360,6 @@
   "twiiter": "تويتر",
   "yes": "نعم",
   "track_order" : "تتبع الطلب",
-  "ar" : "ar"
+  "ar" : "ar",
+  "our_branches" : "فروعنا"
 }
