--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -349,5 +349,6 @@
   "twiiter": "twiiter",
   "yes": "yes",
   "track_order" : "track order",
-  "ar" : "ع"
+  "ar" : "ع",
+  "our_branches" : "our branches"
 }
