--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -369,5 +369,6 @@
   "delivering_to_your_address": "سيصل إلى عنوانك",
   "call_delivery": "مكالمة التوصيل",
   "tel:+": "تليفون: +",
-  "ar" : "ar"
+  "ar" : "ar",
+  "product_search_index": "بحث"
 }
