--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -358,5 +358,6 @@
   "delivering_to_your_address": "delivering to your address",
   "call_delivery": "call delivery",
   "tel:+": "tel:+",
-  "ar" : "ع"
+  "ar" : "ع",
+  "product_search_index": "search"
 }
