--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -366,5 +366,7 @@
   "earliest_delivery" : "earliest delivery",
   "done": "done",
   "must_select_min_and_max" : "must choose min {{min}} qty or {{max}} qty.",
-  "select_method" : "select method"
+  "select_method" : "select method",
+  "product_search_index" : "searching products",
+  "delivery_to" : "deliver to"
 }
