--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -380,5 +380,6 @@
   "must_select_min_and_max" : "يجب اختيار اقل كمية {{min}} واقصى كمية {{max}}",
   "select_method" : "طريقة استلام الطلب",
   "product_search_index" : "البحث في المنتجات ..",
-  "delivery_to" : "التوصيل لـ"
+  "delivery_to" : "التوصيل لـ",
+  "select_branch": "اختر فرع"
 }
