--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -368,5 +368,6 @@
   "must_select_min_and_max" : "must choose min {{min}} qty or {{max}} qty.",
   "select_method" : "select method",
   "product_search_index" : "searching products",
+  "select_branch": "select branch",
   "delivery_to" : "deliver to"
 }
