--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -386,5 +386,5 @@
   "pickup_from" : "الاستلام من",
   "select_branch": "اختر فرع",
   "order_not_found" : "لا يوجد أمر عمل بهذا المرجع .. يرجى مراجعة الفاتورة أو يمكنك الاتصال بنا",
-  "choose_location": "اختر موقع"
+  "choose_location": "اختر موقع",
 }
