--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -387,4 +387,5 @@
   "select_branch": "اختر فرع",
   "order_not_found" : "لا يوجد أمر عمل بهذا المرجع .. يرجى مراجعة الفاتورة أو يمكنك الاتصال بنا",
   "choose_location": "اختر موقع",
+  "my_cart" : "عربة التسوق"
 }
