--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -374,5 +374,6 @@
   "deliver_to" : "deliver to",
   "pickup_from" : "pickup from",
   "order_not_found" : "order not found. please review your order invoice. or contact us for more information. thank you..",
-  "choose_location": "choose_location"
+  "choose_location": "choose_location",
+  "my_cart" : "my cart"
 }
