change product module structure + add lazy queries to MainLayout

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -396,5 +396,6 @@
   "enter_code_here": "أدخِل الكود هنا",
   "note": "ملاحظات",
   "enter_notes_here": "أدخِل الملاحظات هنا",
-  "delivery_services": "خدمات التوصيل"
+  "delivery_services": "خدمات التوصيل",
+  "back_to_home" : "العودة إلى الرئيسية"
 }
