--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -384,6 +384,7 @@
   "enter_code_here": "enter code here",
   "note": "note",
   "enter_notes_here": "enter notes here",
-  "delivery_services": "delivery services"
+  "delivery_services": "delivery services",
+  "back_to_home" : "back to home"
   
 }
