working on cart

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -385,6 +385,6 @@
   "note": "note",
   "enter_notes_here": "enter notes here",
   "delivery_services": "delivery services",
-  "back_to_home" : "back to home",
+  "back_to_home" : "back to home"
   
 }
