--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -397,5 +397,5 @@
   "note": "ملاحظات",
   "enter_notes_here": "أدخِل الملاحظات هنا",
   "delivery_services": "خدمات التوصيل",
-  "back_to_home" : "العودة إلى الرئيسية",
+  "back_to_home" : "العودة إلى الرئيسية"
 }
