done with cartSlice

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -397,5 +397,6 @@
   "note": "ملاحظات",
   "enter_notes_here": "أدخِل الملاحظات هنا",
   "delivery_services": "خدمات التوصيل",
-  "back_to_home" : "العودة إلى الرئيسية"
+  "back_to_home" : "العودة إلى الرئيسية",
+  "please_review_sections_some_r_required" : "بعض الاقسام مطلوبة لاستكمال اضافة المنتج لعربة التسوق .. يرجى مراجعة الأقسام الفرعية"
 }
