--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -411,5 +411,10 @@
   "deliver_later": "التوصيل لاحقًا",
   "checkout": "الدفع",
   "delivery_prefrences": "أولوية التسليم",
-  "please_review_sections_some_r_required" : "بعض الاقسام مطلوبة لاستكمال اضافة المنتج لعربة التسوق .. يرجى مراجعة الأقسام الفرعية"
+  "please_review_sections_some_r_required" : "بعض الاقسام مطلوبة لاستكمال اضافة المنتج لعربة التسوق .. يرجى مراجعة الأقسام الفرعية",
+  "cart_is_not_ready_error_occurred" : "عربة التسوق الخاصه بك لم يتم تسجيل بياناتها. حدث خطأ غير معلوم يرجى المحاولة مرة اخرى..",
+  "item_added_to_cart_success" : "تم تحديث عربة التسوق الخاص بك.",
+  "no_branch_found_pleas_add_branch_or_area" : "يجب اختيار احد الفروع في حالة التوصيل",
+  "userid_or/and_tempid_not_found_!_please_enter_valid_userid_or_tempid" : "خطأ للنظام : رقم المستخدم أو رقم عربة التسوق يوجد به خطأ !!"
+
 }
