--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -414,5 +414,10 @@
   "please_review_sections_some_r_required" : "بعض الاقسام مطلوبة لاستكمال اضافة المنتج لعربة التسوق .. يرجى مراجعة الأقسام الفرعية",
   "expected_delivery_time": "الوقت المتوقع للوصول",
   "order_summary": "ملخص الطلب",
-  "select_payments": "اختر طريقة الدفع"
+  "select_payments": "اختر طريقة الدفع",
+  "success": "نجاح",
+  "thank_you": "شكرًا لك",
+  "your_order_is_confirmed_and_on_its_way": "تم تأكيد طلبك وفي طريقه",
+  "track_your_order_and_check_the_status_of_it_live": "تتبع طلبك وتحقق من حالته",
+  "order_again": "اطلب مرة ثانية"
 }
