--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -411,5 +411,9 @@
   "thank_you": "thank you",
   "your_order_is_confirmed_and_on_its_way": "your order is confirmed and on its way",
   "track_your_order_and_check_the_status_of_it_live": "track your order and check the status of it live",
-  "order_again": "order again"
+  "order_again": "order again",
+  "you_can_retry_your_order_placement_or_check_your_cart_items_before_processing_your_order": "you can retry your order placement or check your cart items before processing your order",
+  "failure": "failure",
+  "'we_re_sorry": "we're sorry",
+  "your_order_placement_is_failed": "your order placement is failed"
 }
