--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -425,7 +425,8 @@
   "track_your_order_and_check_the_status_of_it_live": "تتبع طلبك وتحقق من حالته",
   "order_again": "اطلب مرة ثانية",
   "failure": "فشل",
-  "we_re_sorry": "آسفون",
+  "we're_sorry": "آسفون",
   "your_order_placement_is_failed": "تم فشل حجز طلبك",
-  "you_can_retry_your_order_placement_or_check_your_cart_items_before_processing_your_order": "يمكنك إعادة محاولة الطلب أو التحقق من العناصر قبل إجراء عملية الطلب"
+  "you_can_retry_your_order_placement_or_check_your_cart_items_before_processing_your_order": "يمكنك إعادة محاولة الطلب أو التحقق من العناصر قبل إجراء عملية الطلب",
+  "retry_order": "إعادة الطلب"
 }
