--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -416,5 +416,15 @@
   "failure": "failure",
   "'we_re_sorry": "we're sorry",
   "your_order_placement_is_failed": "your order placement is failed",
-  "retry_order": "retry order"
+  "retry_order": "retry order",
+  "pick_up_now": "pick up now",
+  "customer_info": "customer info",
+  "pick_up_details": "pick up details",
+  "branch": "branch",
+  "payment_details": "payment details",
+  "order_details": "order details",
+  "qty": "qty",
+  "item": "item",
+  "add_on": "add on",
+  "sp_req": "sp req"
 }
