add pages and set the current Module + current title for each cart page

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -439,5 +439,8 @@
   "qty": "الكمية",
   "item": "عنصر",
   "add_on": "إضافات",
-  "sp_req": "رقم الطلب"
+  "sp_req": "رقم الطلب",
+  "delivery_fees" : "رسوم التوصيل",
+  "cart_address" : "تفاصيل العنوان",
+  "order_review" : "مراجعة الطلب"
 }
