add address to customerSlice

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -393,9 +393,9 @@
   "items": "عناصر",
   "promotion": "ترقية",
   "promotion_code": "كود الترقية",
-  "enter_code_here": "أدخِل الكود هنا",
+  "enter_code_here": "أدخِل كود الخصم",
   "note": "ملاحظات",
-  "enter_notes_here": "أدخِل الملاحظات هنا",
+  "enter_notes_here": "أدخِل الملاحظات ",
   "delivery_services": "خدمات التوصيل",
   "back_to_home" : "العودة إلى الرئيسية",
   "delivery_location": "موقع التوصيل",
@@ -405,7 +405,7 @@
   "floor#": "الطابق",
   "office_no": "مكتب رقم",
   "avenue": "رئيسي",
-  "paci": "الهيئة العامة للمعلومات المدنية",
+  "paci": "البطاقة المدنية",
   "additional": "إضافي",
   "deliver_now": "التوصيل الآن",
   "deliver_later": "التوصيل لاحقًا",
