remove duplicate receipt

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -438,6 +438,5 @@
   "order_details": "تفاصيل الطلب",
   "qty": "الكمية",
   "item": "عنصر",
-  "add_on": "إضافات",
-  "sp_req": "رقم الطلب"
+  "add_on": "إضافات"
 }
