--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -415,7 +415,7 @@
   "promo_code_is_invalid" : "promo code is invalid",
   "you_can_retry_your_order_placement_or_check_your_cart_items_before_processing_your_order": "you can retry your order placement or check your cart items before processing your order",
   "failure": "failure",
-  "'we_re_sorry": "we're sorry",
+  "we_re_sorry": "we're sorry",
   "your_order_placement_is_failed": "your order placement is failed",
   "retry_order": "retry order",
   "pick_up_now": "pick up now",
@@ -426,6 +426,5 @@
   "order_details": "order details",
   "qty": "qty",
   "item": "item",
-  "add_on": "add on",
-  "sp_req": "sp req"
+  "add_on": "add on"
 }
