--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -430,5 +430,6 @@
   "sp_req": "sp req",
   "delivery_fees" : "delivery fees",
   "cart_address" : "address details",
-  "order_review" : "order review"
+  "order_review" : "order review",
+  "some_fields_r_missing" : "some fields are missing"
 }
