--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -431,5 +431,6 @@
   "delivery_fees" : "delivery fees",
   "cart_address" : "address details",
   "order_review" : "order review",
-  "some_fields_r_missing" : "some fields are missing"
+  "some_fields_r_missing" : "some fields are missing",
+  "item_removed_from_cart" : "item removed from cart successfully."
 }
