--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -442,5 +442,7 @@
   "sp_req": "رقم الطلب",
   "delivery_fees" : "رسوم التوصيل",
   "cart_address" : "تفاصيل العنوان",
-  "order_review" : "مراجعة الطلب"
+  "order_review" : "مراجعة الطلب",
+  "enter_your_name":"ادخل اسمك",
+  "enter_your_email":"ادخل عنوان بريدك الالكتروني"
 }
