--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -430,5 +430,7 @@
   "sp_req": "sp req",
   "delivery_fees" : "delivery fees",
   "cart_address" : "address details",
-  "order_review" : "order review"
+  "order_review" : "order review",
+  "enter_your_name":"enter your name",
+  "enter_your_email":"enter your email"
 }
