--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -442,5 +442,9 @@
   "delivery_fees" : "رسوم التوصيل",
   "cart_address" : "تفاصيل العنوان",
   "order_review" : "مراجعة الطلب",
-  "some_fields_r_missing" : "جميع الحقول مطلوبة .. يرجى تعبئه الحقول بالكامل"
+  "some_fields_r_missing" : "جميع الحقول مطلوبة .. يرجى تعبئه الحقول بالكامل",
+  "delivery_now": "توصيل الآن",
+  "pickup_now": "استلام الآن",
+  "store_branch": "مخزن/ فرع",
+  "time_date": "الوقت/ التاريخ"
 }
