--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -444,5 +444,6 @@
   "cart_address" : "تفاصيل العنوان",
   "order_review" : "مراجعة الطلب",
   "some_fields_r_missing" : "جميع الحقول مطلوبة .. يرجى تعبئه الحقول بالكامل",
-  "item_removed_from_cart" : "تم حذف العنصر بنجاح"
+  "item_removed_from_cart" : "تم حذف العنصر بنجاح",
+  "cart_is_not_ready_error_occurred" : "خطا غير معلوم بعربة التسوق .. يرجى المحاولة مرة اخرى"
 }
