--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -438,5 +438,6 @@
   "pickup_now": "pickup now",
   "store_branch": "store/branch",
   "time_date": "time/date",
-  "item_removed_from_cart" : "item removed from cart successfully."
+  "item_removed_from_cart" : "item removed from cart successfully.",
+  "user_cart_data" : "cart updated successfully. please proceed to complete.."
 }
