--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -434,5 +434,7 @@
   "enter_your_name":"enter your name",
   "enter_your_email":"enter your email",
   "some_fields_r_missing" : "some fields are missing",
-  "item_removed_from_cart" : "item removed from cart successfully."
+  "item_removed_from_cart" : "item removed from cart successfully.",
+  "select_atleast_one_address_field":"fill atleast one address field",
+  "address_saved_successfully":"address saved successfully"
 }
