--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -446,5 +446,7 @@
   "enter_your_name":"ادخل اسمك",
   "enter_your_email":"ادخل عنوان بريدك الالكتروني",
   "some_fields_r_missing" : "جميع الحقول مطلوبة .. يرجى تعبئه الحقول بالكامل",
-  "item_removed_from_cart" : "تم حذف العنصر بنجاح"
+  "item_removed_from_cart" : "تم حذف العنصر بنجاح",
+  "select_atleast_one_address_field":"املا علي الاقل حقل واحد للعنوان",
+  "address_saved_successfully":"تم حفظ العنوان بنجاح"
 }
