--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -450,5 +450,7 @@
   "store_branch": "مخزن/ فرع",
   "time_date": "الوقت/ التاريخ",
   "item_removed_from_cart" : "تم حذف العنصر بنجاح",
-  "user_cart_data" : "تم تحديث عربة التسوق بنجاح. يرجى المتابعة لاستكمال طلب."
+  "user_cart_data" : "تم تحديث عربة التسوق بنجاح. يرجى المتابعة لاستكمال طلب.",
+  "order_time": "وقت الطلب",
+  "order_status": "حالة الطلب"
 }
