--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -439,5 +439,7 @@
   "store_branch": "store/branch",
   "time_date": "time/date",
   "item_removed_from_cart" : "item removed from cart successfully.",
-  "user_cart_data" : "cart updated successfully. please proceed to complete.."
+  "user_cart_data" : "cart updated successfully. please proceed to complete..",
+  "order_time": "order time",
+  "order_status": "order status"
 }
