--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -452,5 +452,7 @@
   "store_branch": "مخزن/ فرع",
   "time_date": "الوقت/ التاريخ",
   "item_removed_from_cart" : "تم حذف العنصر بنجاح",
-  "user_cart_data" : "تم تحديث عربة التسوق بنجاح. يرجى المتابعة لاستكمال طلب."
+  "user_cart_data" : "تم تحديث عربة التسوق بنجاح. يرجى المتابعة لاستكمال طلب.",
+  "pickup_prefrences":"تفضيلات الاستلام",
+  "pickup_later":"الاستلام لاحقا"
 }
