--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -219,7 +219,7 @@
   "quantity": "الكمية",
   "total_price": "السعر الإجمالي",
   "change_password": "تغيير كلمة السر",
-  "old_password": "كلمة السر القديمة", 
+  "old_password": "كلمة السر القديمة",
   "save": "حفظ",
   "no_classes_found": "لا يوجد دروس",
   "no_products_found": "لا يوجد منتجات",
@@ -456,5 +456,7 @@
   "pickup_prefrences":"تفضيلات الاستلام",
   "pickup_later":"الاستلام لاحقا",
   "order_time": "وقت الطلب",
-  "order_status": "حالة الطلب"
+  "order_status": "حالة الطلب",
+  "cart_updated_successfully" : "تم تحديث عربة التسوق بنجاح.",
+  "item_added_successfully" : "تم اضافة العنصر بنجاح."
 }
