--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -450,5 +450,8 @@
   "item_added_successfully" : "item added successfully.",
   "time_and_date_saved_successfully":"time and date are saved successfully",
   "shop_is_close_at_this_time":"shop is close at this time",
-  "shop_is_busy_at_this_time":"shop is busy at this time"
+  "shop_is_busy_at_this_time":"shop is busy at this time",
+  "You_’re_about_to_change_your_location":"You’re about to change your location",
+  "changing_your_location_might_result_in_removing_the_items_from_your_cart":"changing your location might result in removing the items from your cart",
+  "select_location":"select location"
 }
