--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -465,5 +465,7 @@
   "You_’re_about_to_change_your_location":"انت علي وشك ان تغير موقعك",
   "changing_your_location_might_result_in_removing_the_items_from_your_cart":"تغييو موقعك قد يؤدي الي ازاله بعض المنتجات من عربة التسوق الخاصة بك",
   "select_location":"حدد موقع",
-  "say_something_about_us": "قل شيئًا عنا"
+  "say_something_about_us": "قل شيئًا عنا",
+  "choose_area_or_branch" : "يجب عليك أولا اختيار منطقتك أو الفرع القريب لك",
+  "start_ordering" : "ابدأ طلبك الآن"
 }
