--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -461,5 +461,6 @@
   "phone_is_required": "phone is required",
   "email_is_required": "email is required",
   "all_fields_r_required" : "all fields are required.",
-  "block_is_required": "block is required"
+  "block_is_required": "block is required",
+  "promo_code_validation" : "promo code activated and applied on your cart."
 }
