trans + clean up

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -479,5 +479,6 @@
   "it_was_okay": "إنه حسنًا",
   "amazing": "مذهل!",
   "note_is_required": "الملاحظات مطلوبة",
-  "optional": "اختياري"
+  "optional": "اختياري",
+  "confirm" : "تأكيد"
 }
