--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -470,5 +470,6 @@
   "note_is_required": "note is required",
   "optional": "optional",
   "confirm" : "confirm",
-  "sorry_!_some_product_not_available_in_this_area" : "sorry ! some product not available in this area."
+  "sorry_!_some_product_not_available_in_this_area" : "sorry ! some product not available in this area.",
+  "cart_is_empty_please_add_product_into_cart":"cart is empty please add product into cart"
 }
