--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -464,8 +464,8 @@
   "block_is_required": "block is required",
   "promo_code_validation" : "promo code activated and applied on your cart.",
   "thanks_for_your_feedback": "thanks for your feedback",
-  "can_be_better": "can_be_better",
-  "it_was_okay": "it_was_okay",
+  "can_be_better": "can be better",
+  "it_was_okay": "it was okay",
   "amazing": "amazing!",
   "note_is_required": "note is required",
   "optional": "optional",
