--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -482,5 +482,6 @@
   "optional": "اختياري",
   "confirm" : "تأكيد",
   "sorry_!_some_product_not_available_in_this_area" : "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع",
-  "cart_is_empty_please_add_product_into_cart":"عربه التسوق فارغة من فضلك قم باضافه بعض المنتجات"
+  "cart_is_empty_please_add_product_into_cart":"عربه التسوق فارغة من فضلك قم باضافه بعض المنتجات",
+  "the_address_field_is_required" : "العنوان مطلوب"
 }
