--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -471,5 +471,6 @@
   "optional": "optional",
   "confirm" : "confirm",
   "sorry_!_some_product_not_available_in_this_area" : "sorry ! some product not available in this area.",
-  "cart_is_empty_please_add_product_into_cart":"cart is empty please add product into cart"
+  "cart_is_empty_please_add_product_into_cart":"cart is empty please add product into cart",
+  "the_address_field_is_required" : "the address field is required."
 }
