fix bugs in refetch cart

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -483,5 +483,7 @@
   "confirm" : "تأكيد",
   "sorry_!_some_product_not_available_in_this_area" : "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع",
   "cart_is_empty_please_add_product_into_cart":"عربه التسوق فارغة من فضلك قم باضافه بعض المنتجات",
-  "the_address_field_is_required" : "العنوان مطلوب"
+  "the_address_field_is_required" : "العنوان مطلوب",
+  "select_a_branch_or_area_before_order" : "يبدو ان عربة التسوق فارغة أو ربما لم يتم اختيار أقرب فرع أو منطقتك. ",
+  "order_created_successfully" : "شكرا .. تم إتمام طلبك بنجاح. يرجى الاحتفاظ برقم الطلب."
 }
