--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -481,7 +481,7 @@
   "note_is_required": "الملاحظات مطلوبة",
   "optional": "اختياري",
   "confirm" : "تأكيد",
-  "sorry_!_some_product_not_available_in_this_area" : "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع",
+  "sorry_some_products_not_available_in_this_area" : "هذا المنتج غير متاح في المنطقة أو الفرع الذي تم اختيار. يرجى تغير المنطقة او الفرع",
   "cart_is_empty_please_add_product_into_cart":"عربه التسوق فارغة من فضلك قم باضافه بعض المنتجات",
   "the_address_field_is_required" : "العنوان مطلوب",
   "select_a_branch_or_area_before_order" : "يبدو ان عربة التسوق فارغة أو ربما لم يتم اختيار أقرب فرع أو منطقتك. ",
