--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -473,5 +473,6 @@
   "sorry_!_some_product_not_available_in_this_area" : "sorry ! some product not available in this area.",
   "cart_is_empty_please_add_product_into_cart":"cart is empty please add product into cart",
   "the_address_field_is_required" : "the address field is required.",
-  "order_created_successfully" : "thank you .. your order has been placed. you can follow the status by your order number."
+  "order_created_successfully" : "thank you .. your order has been placed. you can follow the status by your order number.",
+  "sorry_some_product_not_available_in_this_area" : "sorry some product not available in this area"
 }
