--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -475,5 +475,6 @@
   "the_address_field_is_required" : "the address field is required.",
   "order_created_successfully" : "thank you .. your order has been placed. you can follow the status by your order number.",
   "sorry_some_product_not_available_in_this_area" : "sorry some product not available in this area",
-  "select_a_branch_or_area_before_order" : "you have to choose a branch or an area. some products may be deleted from your shopping cart as it may not be available. thank you ..."
+  "select_a_branch_or_area_before_order" : "you have to choose a branch or an area. some products may be deleted from your shopping cart as it may not be available. thank you ...",
+  "order_code" : "order code"
 }
